oss/db/influxdb_delete/influxdb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
  namespace: db
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - onebailey.shop
      secretName: argocd-tls
  rules:
    - host: onebailey.shop
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: influxdb-influxdb2
                port:
                  number: 8086
